--- a/js-anwendungen.html
+++ b/js-anwendungen.html
@@ -45,7 +45,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
     <li><a href="project-webdesign.html">Web Design</a></li>
-    <li>JavaScript</li>
+    <li>Projekt 3</li>
   </ul>
   <section id="site-hero-dark">
     <div class="inside">
@@ -55,7 +55,7 @@
         <button class="dropbtn">Overview </button>
           <div class="dropdown-content">
             <a href="portfolio.html">All</a>
-            <a href="#" class="current">Webdesign</a>
+            <a href="project-webdesign.html" >Webdesign</a>
             <a href="project-prints.html" >Prints</a>
             <a href="project-illustration.html">Graphics</a>
           </div>
@@ -161,8 +161,8 @@
 
     
   <div class="pre-back-buttons">
-    <button><a href="project-webdesign.html"> <img class="arrowsRightLeft" src="icons/arrow left.png" alt="Zurück zum Webdesign"> Webdesign </a></button>
-    <button><a href="portfolio.html">Overview <img class="arrowsRightLeft" src="icons/arrow right.png" alt="Zur Übersicht"></a></button>
+    <button><a href="project-webdesign.html">&#129092; Webdesign </a></button>
+    <button><a href="portfolio.html">Overview &#129094;</a></button>
   </div>
 
   </main>
