--- a/mindfulApp.html
+++ b/mindfulApp.html
@@ -3,48 +3,13 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Anne Dalchow - Webdesign</title>
- <meta name="description" content="Anne Dalchow - Portfolio Webdesign">
+ <title>Anne Dalchow - App Design</title>
+ <meta name="description" content="Anne Dalchow - Portfolio Web Design App Design Figma">
  <link href="css/style.css" rel="stylesheet" media="all">
  <link rel="stylesheet" href="css/appdesign.css" media="all">
  <link rel="preload" fetchpriority="high" as="image" href="bilder/hero-dark.png" type="image/webp">
-
- <style>
-  .lightbox {
-    display: none;
-    position: fixed;
-    z-index: 999;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-  .lightbox-content {
-    position: relative;
-    margin: 10% auto;
-    padding: 20px;
-    width: 80%;
-    max-width: 800px;
-    background-color: #fff;
-    border-radius: 10px;
-  }
-  .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    cursor: pointer;
-    font-size: 24px;
-    color: white;
-  }
-  .lightbox-img {
-    max-width: 90%; 
-    max-height: 90%; 
-    margin: auto; 
-  }
-
-</style>
 </head>
+
 <body>
  <!--------HEADER-------------------------->
  <header> 
@@ -82,7 +47,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
     <li><a href="project-webdesign.html">Web Design</a></li>
-    <li>App Design</li>
+    <li>Projekt 1</li>
   </ul>
   <section id="site-hero-dark">
     <div class="inside">
@@ -125,9 +90,9 @@
         <hr>
       </span>
 
-        <p>Die Zielgruppe: <br> Alle erwachsenen Personen, die ihre Aufgaben strukturieren und ihre Tages/Wochenstrukturierung optimieren wollen, da sie das Gefühl haben das etwas unausgeglichen ist in ihrem Leben (fühlen sich gestresst, unglücklich, etc.)</p>
+        <p><span class="p-color">Die Zielgruppe: </span><br> Alle erwachsenen Personen, die ihre Aufgaben strukturieren und ihre Tages/Wochenstrukturierung optimieren wollen, da sie das Gefühl haben das etwas unausgeglichen ist in ihrem Leben (fühlen sich gestresst, unglücklich, etc.)</p>
         <p> <br>
-          Die Zielsetzung: <br> Diese App soll den Nutzenden mit Tools wie Wochenanalyse, Stimmungstagebuch und Meditationsübungen unterstützen, ihre Tages-/Wochenstrukturierung zu optimieren und vorallem eine ausgeglicheneren individuellen Weg für sich zu entwickeln.</p>
+          <span class="p-color">Die Zielsetzung:</span><br> Diese App soll den Nutzenden mit Tools wie Wochenanalyse, Stimmungstagebuch und Meditationsübungen unterstützen, ihre Tages-/Wochenstrukturierung zu optimieren und vorallem eine ausgeglicheneren individuellen Weg für sich zu entwickeln.</p>
         </p> <br>
         <p>Daraufhin entwickelte ich eine Persona, um die Bedürfnisse zu konkretisieren und die Hauptkriterien für die App herauszuarbeiten.</p>
       </div>
@@ -154,14 +119,15 @@
       <div class="project-appdesign-description">
         <h3>Strukturierung & Aufbau</h3>
         <hr>
-        <p>Ziel einer ansprechenden UX ist es, Benutzende möglichst nahtlos an das Nutzungsziel zu bringen.</p> <br>
-        <p> <ul>Dazu sind folgende Faktoren vorab zu überlegen und auf die Bedürfnisse zuzuschneiden: 
-          <li> <br></li>
-          <li>- Content (z. B. zielgruppenorientierte Texte und Bildmaterial)</li>
-          <li>- Animationen (z. B. Übergänge oder Microanimations)</li>
-          <li>- Informationsarchitektur (Seitenaufbau, Navigation, Module/Kategorien)</li>
-          <li>- Usability (z. B. generelle Nutzerfreundlichkeit und intuitive Bedienung)</li>
-        </ul></p>
+        <p>Ziel einer ansprechenden UX ist es, Benutzende möglichst nahtlos an das Nutzungsziel zu bringen.<br>
+        Dazu sind folgende Faktoren vorab zu überlegen und auf die Bedürfnisse zuzuschneiden:
+      </p> 
+      <ul class="project-appdesign-description-list"> 
+          <li>Content (z. B. zielgruppenorientierte Texte und Bildmaterial)</li>
+          <li>Animationen (z. B. Übergänge oder Microanimations)</li>
+          <li>Informationsarchitektur (Seitenaufbau, Navigation, Module/Kategorien)</li>
+          <li>Usability (z. B. generelle Nutzerfreundlichkeit und intuitive Bedienung)</li>
+        </ul>
       </div>
       
       <div class="project-appdesign-description">
@@ -238,15 +204,15 @@
 
         <video width="auto" height="528px" controls>
           <source src="video/app-interaction-video.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+        Dein Browser unterstützt keine Videowiedergabe.
         </video>
         <video width="auto" height="528px" controls>
           <source src="video/app-interaction-video1.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+        Dein Browser unterstützt keine Videowiedergabe.
         </video>
         <video width="auto" height="528px" controls>
           <source src="video/app-interaction-video2.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+        Dein Browser unterstützt keine Videowiedergabe.
         </video>
       </div>
 
@@ -263,78 +229,15 @@
       <div class="assets-interaction-figma-presentation">
         <p>Du bist neugierig geworden und möchtest dir einen eigenen Eindruck von meinem Prototypen machen? <br> <br>
         Dann sende mir eine E-Mail mit einer kurzen Nachricht. <br>Nach meiner Freischaltung kannst du über den Button unterhalb zu meinem Projekt gelangen.</p>
-        <button><a href="https://www.figma.com/proto/kvcCFtU7xMqExpHbsnsAzE/App-Mindful-path?page-id=0%3A1&node-id=511-7255&viewport=941%2C459%2C0.06&t=3TUadbO52CctBhaC-9&scaling=scale-down&content-scaling=fixed&starting-point-node-id=511%3A7255&show-proto-sidebar=1" target="_blank">Open in Figma</a></button>
+        <button><a href="https://www.figma.com/proto/kvcCFtU7xMqExpHbsnsAzE/App-Mindful-path" target="_blank">Open in Figma</a></button>
       </div>
     </div>
-
-
    </section>
 
-   <!---SLIDER--->
-   <!--<section>
- 
-    <div class="slide-container-appdesign">
-     <div class="slides-appdesign">
-       <div class="numbertext">1 / 6</div>
-       <img src="https://placehold.co/1300x484" alt="#">
-     </div>
- 
-     <div class="slides-appdesign">
-       <div class="numbertext">2 / 6</div>
-       <img src="https://placehold.co/1300x484" alt="#">
-     </div>
- 
-     <div class="slides-appdesign">
-       <div class="numbertext">3 / 6</div>
-       <img src="https://placehold.co/1300x484" alt="#">
-     </div>
- 
-     <div class="slides-appdesign">
-       <div class="numbertext">4 / 6</div>
-       <img src="https://placehold.co/1300x484" alt="#">
-     </div>
- 
-     <div class="slides-appdesign">
-       <div class="numbertext">5 / 6</div>
-       <img src="https://placehold.co/1300x484" alt="#">
-     </div>
- 
-     <div class="slides-appdesign">
-       <div class="numbertext">6 / 6</div>
-       <img src="https://placehold.co/1300x484" alt="#">
-     </div>
- 
-     <a class="prev-slide-appdesign" onclick="plusSlides(-1)">❮</a>
-     <a class="next-slide-appdesign" onclick="plusSlides(1)">❯</a>
- 
-     <div class="caption-container-slides-appdesign">
-       <p id="caption-appdesign"></p>
-     </div>
- 
-     <div class="row-slide-appdesign">
-       <div class="column-slide-appdesign">
-         <img class="demo cursor" src="/bilder/abstract-6047465.jpg" onclick="currentSlide(1)" alt="The Woods">
-       </div>
-       <div class="column-slide-appdesign">
-         <img class="demo cursor" src="/bilder/Autumn_Illu_500x700.png" onclick="currentSlide(2)" alt="Cinque Terre">
-       </div>
-       <div class="column-slide-appdesign">
-         <img class="demo cursor" src="/bilder/BMI Rechner.png" onclick="currentSlide(3)" alt="Mountains and fjords">
-       </div>
-       <div class="column-slide-appdesign">
-         <img class="demo cursor" src="/bilder/bmi-st-1326844049.png" onclick="currentSlide(4)" alt="Northern Lights">
-       </div>
-       <div class="column-slide-appdesign">
-         <img class="demo cursor" src="/bilder/do-create-text-portrait-effects-in-photoshop.jpg" onclick="currentSlide(5)" alt="Nature and sunrise">
-       </div>
-       <div class="column-slide-appdesign">
-         <img class="demo cursor" src="/bilder/Flyer_Projekt.png" onclick="currentSlide(6)" alt="Snowy Mountains">
-       </div>
-     </div>
-   </div>
-  </section>
--->
-
+   <div class="pre-back-buttons">
+    <button><a href="project-webdesign.html">&#129092; Webdesign </a></button>
+    <button><a href="portfolio.html">Overview &#129094;</a></button>
+  </div>
 </main>
   
   <!--------FOOTER-------------------------->
