--- a/project-prints.html
+++ b/project-prints.html
@@ -90,17 +90,17 @@
       <div class="prints-img-container">
   
         <div class="prints-first-img">
-            <img class="fade-in-prints" src="bilder/Kassette_hochkant.png" alt="Farbiger UV Druck auf Kassettenhülle" width="auto" height="auto">
-            <span class="prints-img-1024px"><img class="fade-in-prints" src="/bilder/Kassette_quer.png" alt="" width="auto" height="auto"></span>
+            <img class="fade-in-prints" src="bilder/Kassette_hochkant.png" alt="UV Druck Vierfarbdruck im UV Drucker liegend" width="auto" height="auto">
+            <span class="prints-img-1024px"><img class="fade-in-prints" src="/bilder/Kassette_quer.png" alt="UV Druck Vierfarbdruck im UV Drucker liegend" width="auto" height="auto"></span>
         </div>
 
         <div class="prints-img">
 
-            <img class="fade-in-prints" src="/bilder/Kassette_var2.png" alt="" width="auto" height="auto">
-            <img class="fade-in-prints" src="/bilder/Webseite Kassette.png" alt="" width="auto" height="auto">
-          <img class="fade-in-prints" src="/bilder/Kassette_var3.png" alt="" width="auto" height="auto">
-          <img class="fade-in-prints" src="/bilder/Kassette_var5.png" alt="" width="auto" height="auto">
-          <img class="fade-in-prints" src="/bilder/UV Druck Kassette2.png" alt="" width="auto" height="auto">
+            <img class="fade-in-prints" src="/bilder/Kassette_var2.png" alt="UV Druck auf Musikkassette in Vierfarbdruck Variante 1" width="auto" height="auto">
+            <img class="fade-in-prints" src="/bilder/Webseite Kassette.png" alt="UV Druck auf Musikkassette in Vierfarbdruck Variante 2" width="auto" height="auto">
+          <img class="fade-in-prints" src="/bilder/Kassette_var3.png" alt="UV Druck auf Musikkassette in Vierfarbdruck Variante 3" width="auto" height="auto">
+          <img class="fade-in-prints" src="/bilder/Kassette_var5.png" alt="UV Druck auf Musikkassette in Vierfarbdruck Variante 4" width="auto" height="auto">
+          <img class="fade-in-prints" src="/bilder/UV Druck Kassette2.png" alt="UV Druck auf Musikkassette in Vierfarbdruck Variante 5" width="auto" height="auto">
         </div>
     </div>
     <div class="print-work">
@@ -161,12 +161,12 @@
       </div>
       
       <div class="textil-prints-img-container">
-          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var1.png" alt="" width="auto" height="auto">
-          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var2.png" alt="" width="auto" height="auto">
-          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var3.png" alt="" width="auto" height="auto">
-          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var4.png" alt="" width="auto" height="auto">
-          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var5.png" alt="" width="auto" height="auto">
-          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var6.png" alt="" width="auto" height="auto">
+          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var1.png" alt="Textildruck auf Shirt Variante 1" width="auto" height="auto">
+          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var2.png" alt="Textildruck auf Shirt Variante 2" width="auto" height="auto">
+          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var3.png" alt="Textildruck auf Shirt Variante 3" width="auto" height="auto">
+          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var4.png" alt="Textildruck auf Shirt Variante 4" width="auto" height="auto">
+          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var5.png" alt="Textildruck auf Shirt Variante 5" width="auto" height="auto">
+          <img class="fade-in-prints" src="bilder/shirts/Shirts_Var6.png" alt="Textildruck auf Shirt Variante 6" width="auto" height="auto">
     </div>
     <div class="print-work">
       <h4>Aufgabenbereiche</h4>
