--- a/project-webdesign.html
+++ b/project-webdesign.html
@@ -169,11 +169,11 @@
           Beschreibung: Erstellung eines fiktiven Möbel Shops mit Elementor und WooCommerce.
            <br> <br>
            Technologien: WordPress, Astra, Elementor, WooCommerce<br> <br>
-          <a class="button-webdesign-project" href="site-in-work.html"><button>Zum Projekt &#129094;</button></a>
+          <a class="button-webdesign-project" href="project-wordpress.html"><button>Zum Projekt &#129094;</button></a>
         </p>
        </div>
        <div class="webdesign-img-container">
-        <a href="todo-app.html"><img src="bilder/wordpress_mockup_klein.png" alt="Vorschau BMI Rechner App"></a>
+        <a href="project-wordpress.html"><img src="bilder/wordpress_mockup_klein.png" alt="Vorschau BMI Rechner App"></a>
       </div>
     </section>
   </div> 
