--- a/portfolio.html
+++ b/portfolio.html
@@ -142,7 +142,7 @@
 
  <section id="work">
 
-  <div class="row">
+  <div class="row-gallery">
     <div id="lightbox">
       <span class="close" onclick="closeLightbox()">&times;</span>
       <img id="lightbox-image">
